--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.1.4",
     "crypto-js": "^4.1.1",
+    "mysql2": "^2.3.3",
+    "npm": "^8.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
@@ -47,6 +51,7 @@
     "prettier": "^2.3.2",
     "prettier-eslint": "^15.0.1",
     "source-map-support": "^0.5.20",
+    "sqlite3": "^5.0.8",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
