--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,20 @@ version: "3.8"
 
 services:
   database:
+    # this is because I'm using an Apple Silicon M1
+    platform: linux/x86_64 
     image: mysql:8
     ports:
-      - 3306:3306
+      - $DB_PORT:3306
     volumes:
       - database:/var/lib/mysql
     env_file:
       - .env
+    environment:
+      - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
+      - MYSQL_PASSWORD=$DB_PASSWORD
+      - MYSQL_USER=$DB_USERNAME
+      - MYSQL_DATABASE=$DB_DATABASE
 
 volumes:
   database: {}
