--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
+    "luxon": "^2.4.0",
     "mysql2": "^2.3.3",
     "npm": "^8.13.1",
     "passport": "^0.6.0",
@@ -47,6 +48,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
